--- a/Ancient.html
+++ b/Ancient.html
@@ -79,7 +79,7 @@
 		Когда похищение Палладия из храма Афины, удачно выполненное Диомедом и Одиссеем<mark>(Вообще безбашенные ребята)</mark>, не помогло взять город, греки прибегают к хитрости.Ну дальше все знают, Троянский Конь...
 		Мнимо отплывшие греки возвращаются и овладевают Троей;<mark>Минутка жизнерадостных новостей</mark> Жители отчасти избиваются, отчасти уводятся в рабство, а город предается огню и разгрому. Менелай убивает Деифоба и освобождает Елену. Неоптолем убивает Агенора, Полита и самого Приама у алтаря Зевса. Диомед убивает Кореба, жениха Кассандры. Ребёнка Астианакта, сына Гектора, победители сбрасывают с башни.
 	</p>
-	<h3><a href="All.html">Вернуться к главной</a></h3>
+	<h3><a href="index.html">Вернуться к главной</a></h3>
 </body>
 </html>
 
