--- a/BozonHiggs.html
+++ b/BozonHiggs.html
@@ -81,7 +81,7 @@ h3{
 			Тем не менее, за полгода экспериментов, когда за одну секунду в коллайдере происходят сотни миллионов столкновений протонов, было выявлено целых 5 таких  четырехлептонных случаев.
 			Для полного и точного подтверждения того, что обнаруженная частица была именно именно бозоном Хиггса, пришлось провести еще очень много опытов. И несмотря на то, что сейчас бозон Хиггса обнаружен, эксперименты в ряде случаев расходятся с теорией, так что Стандартная модель, как считают многие ученые, скорее всего является частью более совершенной теории, которую еще предстоит открыть.
 		</h2>
-		<h3><a href="All.html">Вернуться к главной</a></h3>
+		<h3><a href="index.html">Вернуться к главной</a></h3>
 </body>
 <footer>
 	<h1 class = "outer">
