--- a/StringTheory.html
+++ b/StringTheory.html
@@ -88,6 +88,6 @@ h3{
 	<h2>Интересный факт:</h2>
 	<p class = "BBT">Шелдон из сериала Теория Большого Взрыва является струнным теоретиком</p>
 	<img src="https://www.yuga.ru/media/7a/00/sheldon_big_b01__wouus14.jpg" alt="" width="1345">
-	<h3><a href="All.html">Вернуться к главной</a></h3>
+	<h3><a href="index.html">Вернуться к главной</a></h3>
 </body>
 </html>
