--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>A</title>
+	<title>Main</title>
 	<link rel="stylesheet" type="text/css">
 </head>
 <style>
