--- a/MultiverseTheory.html
+++ b/MultiverseTheory.html
@@ -77,6 +77,6 @@ h3{
  	<p class = "opinion">
  		Лично для меня, наиболее интересной представляется 5 теория
  	</p>
- 		<h3><a href="All.html">Вернуться к главной</a></h3>
+ 		<h3><a href="index.html">Вернуться к главной</a></h3>
 </body>
 </html>
