--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 			font:7em "Comic Sans MS", bold;
 		}
 		h2{
+			color:#FFD700;
 			border-radius:30px ;
 			background:#7FFFD4;
 			padding: 10px;
