--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 			font:7em "Comic Sans MS", bold;
 		}
 		h2{
-			color:#FFD700;
+			color:#191970;
 			border-radius:30px ;
 			background:#7FFFD4;
 			padding: 10px;
@@ -58,13 +58,13 @@
    google.setOnLoadCallback(drawChart);
    function drawChart() {
     var data = google.visualization.arrayToDataTable([
-     ['Год', 'Холодное оружие', 'Математика и Физика', 'Книги', 'Программирование', 'Теннис', 'Сериалы', 'Музыка'],
+     ['Год', 'Холодное оружие', 'Математика и Физика', 'Теннис', 'Музыка', 'Программирование','Книги',  'Сериалы'],
      ['2004-2007', 0, 0, 0, 0, 0, 0, 0],
-     ['2008-2014', 0, 0, 3, 0, 0, 0, 0],
-     ['2015-2016', 0, 0, 3, 0, 1, 0, 2],
-     ['2017', 0, 0, 4, 0, 2, 0.5, 2],
-     ['2018', 1.5, 1, 4, 0, 3, 1, 2],
-     ['2019-2020', 2.5, 3, 4.2, 4, 5, 2.5, 3.2],
+     ['2008-2014', 0, 0, 0, 0, 0, 3, 0],
+     ['2015-2016', 0, 0, 1, 2, 0, 3, 0],
+     ['2017',      0, 0, 2, 2, 0, 4, 0.5],
+     ['2018',      1.5, 1, 3, 2.5, 0, 4, 1],
+     ['2019-2020', 2.5, 3, 5, 3.2, 4, 4.2, 2.5],
     ]);
     var options = {
      title: 'Хобби',
