--- a/index.html
+++ b/index.html
@@ -1,44 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>BlackDeath</title>
-<script src="https://www.google.com/jsapi"></script>
-  <script>
-   google.load("visualization", "1", {packages:["corechart"]});
-   google.setOnLoadCallback(drawChart);
-   function drawChart() {
-    var data = google.visualization.arrayToDataTable([
-     ['Последствие', 'Его процент влияния на историю'],
-     ['Сокращение населения', 48],
-     ['Повышение зарплат', 8],
-     ['Улучшение качества жизни', 9],
-     ['Развитие медицины',20],
-     ['Улучшение иммунитета', 7],
-     ['Освобождение большинства крестьян', 5],
-     ['Улучшение жизни религиозных меньшинств', 3]
-    ]);
-    var options = {
-     title: 'Последствия',
-     is3D: true,
-    };
-    var chart = new google.visualization.PieChart(document.getElementById('BlackDeath'));
-     chart.draw(data, options);
-   }
-  </script>
-  <style type="text/css">
-  	i{font:1em "Comic Sans MS";
-			}
-    b{font:2em "Helvetica";}
-    div{background:"#FFE4C4"}
-  </style>
-</head>	
-<body bgcolor="#FFE4C4">
-<b>Здесь я хотел бы представить отрывок из моего реферата на тему Черной смерти и её влияния на ход истории.</b><br>
-<i>Несмотря на страшный ущерб, который понесли все европейские страны, у этой трагедии были и общепризнанные положительные последствия. Но сейчас я хотел бы рассказать об еще одной вещи, оказавшей пользу всему населению земли и все-таки провести параллель с самым обсуждаемой новостью 2020 года – пандемией коронавируса. Как я уже говорил ранее, погибло чудовищное кол-во людей, но давайте вспомним с чего это все началось. Перенаселение, ужасающая нищета в нижних слоях общества. Ничего не напоминает? Первая проблема исчезла по очевидным причинам, а в процессе реабилитации Европы и вторая постепенно стала уменьшаться. Думаю уже понятно почему я упомянул коронавирус. Население Земли растет с неприятной быстротой, а это может повлечь за собой последствия гораздо хуже. Вспомним хотя бы о глобальном потеплении, которое гораздо хуже пандемии. Но нет, сами люди начнут действовать только когда это самое потепление придет им в дом и ударит прямо в лицо! Коронавирус позволил отсрочить грядущую катастрофу, пусть и ненадолго. Также хотелось бы упомянуть о самых частых мотивах злодеев в нынешних фильмах. Чаще всего они хотят радикальным способом уменьшить население Земли, а бравый герой им мешает в последний момент. Но давайте разберемся, герой ли это? Пусть чаще всего злодеи действуют излишне жестокими и кровавыми методами, обладают психическими заболеваниями, но иногда мне крайне импонирует их точка зрения. Можно привести пару поговорок, иллюстрирующих данное мнение и их интерпретации по моему мнению. «Не разбив яиц, омлет не приготовишь» - «Не проредив население, Землю не спасешь». «Куй железо пока горячо» - «Пока есть возможность, лучше принять меры». В итоге всех моих размышлений, можно сделать заключительный вывод, что самое ужасное событие за последнее тысячелетие, не так уж и страшно и везде можно найти свои плюсы и преимущества!</i>
-<div id="BlackDeath" style="width: 1100px; height: 1000px;"></div>
-<b>Как можно заметить уже с помощью диаграммы, плюсов, компенсирующих потери, вполне достаточно, что более иллюстрированно доказывает мою точку зрения.
-С полным текстом реферата можно ознакомиться по <a href="text.html">ссылке</a></b>
-</body>
-</html>
+<meta charset="utf-8">
+<script>
+  while(true){
+    var ans = +prompt('Надеюсь, ты догадалась, так что введи численный пароль))');
+    if(ans==139238186||ans==579275){alert('Умница! Я в тебе не сомневался:D Если ты посмотришь в свой пенал, то обнаружишь там новую ручку. От тебя требуется лишь вскрыть её)');
+    break}
+    else if(ans==1511233640){alert("Этот коротенький квест, к сожалению, подходит к концу. Надеюсь ты поняла к чему отсылал этот пароль) Что ж, последнее, что требуется - посмотреть в учебник по обществознанию, страница 17");break}
+    else{alert('Компьютер говорит !Лауре! попробовать ещё раз')
+
+}}</script>
