--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     var ans = +prompt('Надеюсь, ты догадалась, так что введи численный пароль))');
     if(ans==139238186||ans==579275){alert('Умница! Я в тебе не сомневался:D Если ты посмотришь в свой пенал, то обнаружишь там новую ручку. От тебя требуется лишь вскрыть её)');
     break}
-    else if(ans==1511233640){alert("Этот коротенький квест, к сожалению, подходит к концу. Надеюсь ты поняла к чему отсылал этот пароль) Что ж, последнее, что требуется - посмотреть в учебник по обществознанию, страница 17");break}
+    else if(ans==1511233640){alert("Этот коротенький квест, к сожалению, подходит к концу. Надеюсь ты поняла к чему отсылал этот пароль) Что ж, последнее, что требуется - посмотреть в свою тетрадь по биологии.");break}
     else{alert('Компьютер говорит !Лауре! попробовать ещё раз')
 
 }}</script>
