--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <meta charset="utf-8">
 <script>
   while(true){
-    var ans = +prompt('Надеюсь, ты догадалась, так что введи численный пароль))');
-    if(ans==139238186||ans==579275){alert('Умница! Я в тебе не сомневался:D Если ты посмотришь в свой пенал, то обнаружишь там новую ручку. От тебя требуется лишь вскрыть её)');
+    var ans = +prompt('Пароль у тебя есть, надо лишь преобразовать его в численный одним способом интересным(начало нашего общения и пиво), а затем применить конкатенацию и ввести сюда');
+    if(ans==139238186||ans==579275){alert('Умница! Я в тебе не сомневался:D Отправь мне перевод слова "express" и радуйся, ты победила!(I<3u)');
     break}
-    else if(ans==1511233640){alert("Этот коротенький квест, к сожалению, подходит к концу. Надеюсь ты поняла к чему отсылал этот пароль) Что ж, последнее, что требуется - посмотреть в свою тетрадь по биологии.");break}
     else{alert('Компьютер говорит !Лауре! попробовать ещё раз')
 
 }}</script>
